# tongrams_estimation

./: .gitmodules  CMakeLists.txt  README.md
include/: adjusting.hpp  comparators.hpp  configuration.hpp  constants.hpp  counter.hpp  counting.hpp  debug.hpp  estimation.hpp  front_coding.hpp  front_coding2.hpp  hash_utils.hpp  index_types.hpp  iterators.hpp  last.hpp  merge_utils.hpp  ngram.hpp  ngrams_block.hpp  ngrams_hash_block.hpp  parallel_last.hpp  parallel_radix_sort.hpp  sliding_window.hpp  statistics.hpp  stream.hpp  stream2.hpp  suffix_trie.hpp  tmp.hpp  trie_level.hpp  typedefs.hpp  util.hpp  util_types.hpp  vocabulary.hpp
include/adjusting/: adjusting.hpp  adjusting_common.hpp  adjusting_writer.hpp  merge_utils.hpp
include/counting/: counting.hpp  counting_common.hpp  counting_reader.hpp  counting_writer.hpp  hash_utils.hpp  ngrams_hash_block.hpp  parallel_radix_sort.hpp  sliding_window.hpp
include/indexing/: estimation_builder.hpp  index_types.hpp  suffix_trie.hpp
include/last/: estimation_builder.hpp  index_types.hpp  last.hpp  write.hpp
include/merging/: merging.hpp  merging_writer.hpp
src/: count.cpp  estimate.cpp
